@@ -45,7 +45,7 @@ public class TestNNWithQJM {
   final Configuration conf = new HdfsConfiguration();
   private MiniJournalCluster mjc = null;
   private final Path TEST_PATH = new Path("/test-dir");
-  private final Path TEST_PATH_2 = new Path("/test-dir");
+  private final Path TEST_PATH_2 = new Path("/test-dir-2");
 
   @Before
   public void resetSystemExit() {
