@@ -1096,6 +1096,10 @@ Release 2.6.0 - UNRELEASED
 
     HDFS-7328. TestTraceAdmin assumes Unix line endings. (cnauroth)
 
+    HDFS-7359. NameNode in secured HA cluster fails to start if
+    dfs.namenode.secondary.http-address cannot be interpreted as a network
+    address. (cnauroth)
+
 Release 2.5.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
